# vector-db-bench

./: .gitignore  README.md  USAGE.md  example.jsonl
DOCUMENTS/: original-prompt.md
agent/: Cargo.toml  system_prompt.txt
agent/src/: bench_tools.rs  evaluator.rs  logger.rs  main.rs  sandbox.rs  state.rs  tools.rs
bench-monitor/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
benchmark/: Cargo.toml
data/: README.md  gitattributes
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
leaderboard/Ling-2.5-1T-turn-1/: Cargo.toml  agent_log.jsonl  eval_log.json  session_context.json
leaderboard/Ling-2.5-1T-turn-1/benchmarks/: benchmark_001.json  benchmark_002.json  benchmark_003.json  benchmark_004.json  benchmark_005.json  benchmark_006.json  benchmark_007.json  benchmark_008.json  benchmark_009.json  benchmark_010.json  benchmark_011.json
leaderboard/Ling-2.5-1T-turn-1/profiling/: report_001.txt  report_002.txt  report_003.txt  report_004.txt  report_005.txt  report_006.txt
leaderboard/Ling-2.5-1T-turn-1/src/: db.rs  distance.rs
leaderboard/Ling-2.5-1T-turn-1/src_best_qps/: db.rs  distance.rs
leaderboard/claude-sonnet-4.6-turn-2/: Cargo.toml  agent_log.jsonl  eval_log.json  session_context.json
leaderboard/claude-sonnet-4.6-turn-2/src/: db.rs  distance.rs
results/: GLM4.7_20260304_174536.json  glm-5_20260216_154716.json  glm-5_20260216_163927.json  glm-5_20260216_170512.json  kimi-k2.5_20260216_163939.json  kimi-k2.5_20260216_164214.json  leaderboard.json  (+3 more)
scripts/: convert_data.py  (+9 more)
(+792 files in other folders)
