[package]
name = "vector-db-skeleton"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
parking_lot = "0.12"

[profile.release]
lto = false
codegen-units = 4
opt-level = 3
debug = true
